--- a/config/database.yml
+++ b/config/database.yml
@@ -5,6 +5,7 @@
 #   gem 'sqlite3'
 development:
   adapter: postgresql
+  encoding: unicode
   database: my_database_development
   pool: 5
   timeout: 5000
@@ -14,12 +15,14 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
+  encoding: unicode
   database: my_datbase_test
   pool: 5
   timeout: 5000
 
 production:
   adapter: postgresql
+  encoding: unicode
   database: my_datbase_production
   pool: 5
   timeout: 5000
