--- a/config/database.yml
+++ b/config/database.yml
@@ -21,8 +21,11 @@ test:
   timeout: 5000
 
 production:
-  adapter: postgresql
-  encoding: unicode
-  database: my_datbase_production
-  pool: 5
-  timeout: 5000
+  adapter: mysql
+  encoding: utf8
+  database: your_db
+  username: root
+  password: your_pass
+  socket: /tmp/mysql.sock
+  host: your_db_ip     #defaults to 127.0.0.1
+  port: 3306
