s3 set up, including fog gem and dotenv-rails gem

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@
 /log/*.log
 /tmp
 
+# Ignore .env
+.env
+
 # Ignore .DS_Store - a Mac OS X hidden file that saves Finder preference
 .DS_Store
 .elasticbeanstalk/
